retrieveUnpackaged/objects/Mass_Mailing_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Docket_Count__c</fullName>
        <label>Docket Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mass_Mailing_Campaign_Content__c</fullName>
        <label>Mass Mailing Campaign Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pro_Cons__c</fullName>
        <label>Pro/Cons</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsoring_Entity__c</fullName>
        <label>Sponsoring Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mass Mailing Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sponsoring_Entity__c</columns>
        <columns>Pro_Cons__c</columns>
        <columns>Docket_Count__c</columns>
        <columns>Mass_Mailing_Campaign_Content__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mass Mailing Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mass Mailing Campaigns</pluralLabel>
    <recordTypes>
        <fullName>Bristol_Bay</fullName>
        <active>true</active>
        <label>Bristol Bay</label>
    </recordTypes>
    <recordTypes>
        <fullName>WOTUS_Recommendations</fullName>
        <active>true</active>
        <label>WOTUS Recommendations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US</fullName>
        <active>true</active>
        <label>Waters of the US</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>